[tool.poetry]
name = "agent"
version = "0.0.1"
description = ""
authors = ["William Hitchcock"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
langgraph = ">=0.2.6"
python-dotenv = ">=1.0.1"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"

[tool.poetry.dev-dependencies]
mypy = ">=1.11.1"
ruff = ">=0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
